cross-fade added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="digital-ocean-logo" src="DigitalOcean Assets/img/logo.png" alt="DigitalOcean logo">
+        <img class="digital-ocean-logo" src="DigitalOcean-Assets/img/logo.png" alt="DigitalOcean logo">
         <ul class="header-navigation header-navigation-center">
             <li><span>Products</span><svg class="header-menu-down-chevron" xmlns="http://www.w3.org/2000/svg"   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg></li>
             <li>Customers</li>
@@ -23,5 +23,8 @@
             <li class="sign-up-button">Sign Up</li>
         </ul>
     </header>
+    <section class="sign-up-form-section">
+
+    </section>
 </body>
 </html>
