--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         </ul>
     </header>
     <section class="sign-up-form-section">
-
+        <article>
+            <h2>The simplest cloud platform for developers & teams</h2>
+            <p>Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infastructure easy for teams and businesses, whether you're running one virtual machine or ten thousand.</p>
+        </article>
+        <section>
+            
+        </section>
     </section>
 </body>
 </html>
