--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>DigitalOcean Clone</title>
 </head>
 <body>
     <header>
-        <img class="digital-ocean-logo" src="DigitalOcean-Assets/img/logo.png" alt="DigitalOcean logo">
+        <div class="header row-wrapper">
+            <img class="digital-ocean-logo" src="DigitalOcean-Assets/img/logo.png" alt="DigitalOcean logo">
         <ul class="header-navigation header-navigation-center">
             <li><span>Products</span><svg class="header-menu-down-chevron" xmlns="http://www.w3.org/2000/svg"   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg></li>
             <li>Customers</li>
@@ -22,15 +23,19 @@
             <li>Login</li>
             <li class="sign-up-button">Sign Up</li>
         </ul>
+        </div>
     </header>
-    <section class="sign-up-form-section">
-        <article>
-            <h2>The simplest cloud platform for developers & teams</h2>
-            <p>Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infastructure easy for teams and businesses, whether you're running one virtual machine or ten thousand.</p>
-        </article>
-        <section>
-            
-        </section>
+    <section class="sign-up-form-container">
+        <div class="sign-up-form-section row-wrapper">
+            <article>
+                <h2>The simplest cloud platform for developers & teams</h2>
+                <p>Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infastructure easy for teams and businesses, whether you're running one virtual machine or ten thousand.</p>
+            </article>
+            <section>
+                <h3 class="sign-up-form-header-1">Deploy your app in seconds.</h3>
+                <h3 class="sign-up-form-header-2">Get started now.</h3>
+            </section>
+        </div>
     </section>
 </body>
 </html>
