optimization section complete

--- a/index.html
+++ b/index.html
@@ -161,5 +161,40 @@
         </div>
         <p>View customer stories &#62;</p>
     </section>
+    <section class="optimization-section-container">
+      <div class="optimization-section row-wrapper">
+        <h2 class="optimization-top-text">Deploy and scale seamlessly</h2>
+        <p class="optimization-top-text">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
+        <div>
+          <ul>
+            <li>Deploy</li>
+            <li>Manage</li>
+            <li>Secure</li>
+            <li>Scale</li>
+            <li>Monitor</li>
+          </ul>
+          <section class="optimiztion-container-padding cluster">
+            <img src="DigitalOcean-Assets/img/cluster-deploy.svg" alt="a cluster">
+            <h3>Cluster deployments</h3>
+            <p>Provision multiple Droplets (virtual machhines) in seconds with our control panel, CLI, or directly against our API.</p>
+          </section>
+          <section class="optimiztion-container-padding types">
+            <img src="DigitalOcean-Assets/img/optimized-compute.svg" alt="a droplet">
+            <h3>Optimized compute types</h3>
+            <p>Get the compute resources you need with Standard or Optimized Droplets.</p>
+          </section>
+          <section class="optimiztion-container-padding apps">
+            <img src="DigitalOcean-Assets/img/one-click.svg" alt="windows">
+            <h3>One-click apps</h3>
+            <p>Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.</p>
+          </section>
+          <section class="optimiztion-container-padding global">
+            <img src="DigitalOcean-Assets/img/global.svg" alt="your location is worldwide">
+            <h3>Global Availability</h3>
+            <p>Deploy to any of our data center regions around the world.</p>
+          </section>
+        </div>
+      </div>
+    </section>
 </body>
 </html>
